started working on game page

--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -13,7 +13,8 @@
     text-transform: uppercase;
 
     &:active {
-        color: $orange;
+        color: $darkorange;
         background-color: $white;
     }
 }
+
