--- a/src/styles/variables.module.scss
+++ b/src/styles/variables.module.scss
@@ -2,7 +2,8 @@
    ** Variables **
    ***************/
   
-  $white: #fbfbfb;
-  $black: #1e232b;
-  $orange: #ff5722;
-  $grey: #333942;
+  $white: #F7F2E8;
+  $black: #211C1C;
+  $orange: #E09314;
+  $darkorange: #E06014;
+  $grey: #3A3333;
