updated button triggers

--- a/src/components/GameParts/Shots/Shots.module.scss
+++ b/src/components/GameParts/Shots/Shots.module.scss
@@ -20,7 +20,7 @@
 }
 
 .Bullet {
-    border: solid $orange 2px;
+    border: solid $orange 0.75vw;
     background-color: $darkorange;
     border-radius: 50%;
     display: flex;
