--- a/src/screen/Game/Game.module.scss
+++ b/src/screen/Game/Game.module.scss
@@ -36,7 +36,7 @@
 }
 
 .GameName {
-    font-size: 4vw;
+    font-size: 5vw;
     margin-bottom: 2vw;
 }
 
@@ -79,6 +79,10 @@
     margin: 2% 0;
     height: 30vh;
     border-radius: 10px;
+}
+
+.playerScore {
+    font-size: 5vw;
 }
 
 .playerInfo {
