--- a/src/styles/fonts.module.scss
+++ b/src/styles/fonts.module.scss
@@ -7,5 +7,12 @@
     src: url('../assets/fonts/BlackOpsOne-Regular.ttf')  format('truetype'),
 }
 
+@font-face {
+    font-family: 'Marker';
+    font-weight: 300;
+    src: url('../assets/fonts/PermanentMarker-Regular.ttf')  format('truetype'),
+}
+
 
 $BO: 'BlackOpsOne-Regular', sans-serif;
+$marker: 'Marker', san-serif;
