--- a/src/screen/GameSelect/GameSelect.module.scss
+++ b/src/screen/GameSelect/GameSelect.module.scss
@@ -12,6 +12,9 @@
     border-radius: 10px;
     padding: 1vw;
     font-size: 2vw;
+    &:focus {
+        outline: none;
+    }
 }
 
 .PlayerInputWrap {
@@ -30,11 +33,13 @@
     margin: 0 auto;
 }
 
-.NameWrap {
+.CardWrap {
     background-color: $white;
     width: 25%;
     border-radius: 11px;
     box-shadow: 0px 10px 10px 0px black;
+    animation: fadeIn;
+    animation-duration: 1s;
 }
 
 .ImageWrap {
@@ -62,3 +67,14 @@
     font-size: 2.25vw;
     padding: 1vw 2vw;
 }
+
+@keyframes fadeIn {
+    from {
+        transform:rotate(10deg);
+        opacity: 0;
+    }
+    to {
+        transform:rotate(0deg);
+        opacity: 1;
+    }
+  }
