begun updating the login page to be individual player slots

--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -1,25 +1,26 @@
-@import "../../../styles/variables.module.scss";
+@import "../../../styles/base.module.scss";
 
 .Button {
-    background-color: $orange;
-    color: $white;
-    padding: 2vw;
-    border-radius: 10px;
-    border: none;
-    box-shadow: 0px 5px 10px 0px black;
-    font-family: inherit;
-    transition: all 0.5s;
-    font-size: 3vw;
-    text-transform: uppercase;
+  border-radius: 10px;
+  padding: 1vw;
+  border: none;
+  transition: all 0.5s;
+  text-transform: uppercase;
+  font-family: $BO;
+  font-size: 20px;
 
-    &:active {
-        color: $darkorange;
-        background-color: $white;
-    }
+  &.orange {
+    color: $darkorange;
+    background-color: $white;
+  }
 
-    &:disabled {
-        background-color: $grey;
-        color: $black;
-    }
+  &:active {
+    color: $darkorange;
+    background-color: $white;
+  }
+
+  &:disabled {
+    background-color: $grey;
+    color: $black;
+  }
 }
-
