--- a/src/screen/Game/Game.module.scss
+++ b/src/screen/Game/Game.module.scss
@@ -1,114 +1,111 @@
-@import '../../styles/variables.module.scss';
+@import "../../styles/variables.module.scss";
 
 .GameScreen {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .ShotsWrap {
-    background-color: $orange;
-    box-shadow: 0px 0px 10px 0px black;
-    border-radius: 10px;
+  background-color: $orange;
+  box-shadow: 0px 0px 10px 0px black;
+  border-radius: 10px;
 }
 
 .TargetProgressWrap {
-    width: 40%;
-    margin: 2vw;
+  width: 40%;
+  margin: 2vw;
 }
 
 .TargetWrap {
-    width: 100%;
-    box-shadow: 0px 0px 10px 0px black;
-    margin: 5% 0;
-    border: 2vw solid $grey;
-    border-radius: 10px;
+  width: 100%;
+  box-shadow: 0px 0px 10px 0px black;
+  margin: 5% 0;
+  border: 2vw solid $grey;
+  border-radius: 10px;
 }
 
 .Target {
-    width: 100%;
+  width: 100%;
 }
 
 .InfoWrap {
-    width: 60%;
-    padding: 3% 2%;
+  width: 60%;
+  padding: 3% 2%;
 }
 
 .GameName {
-    font-size: 5vw;
-    margin-bottom: 2vw;
+  font-size: 5vw;
+  margin-bottom: 2vw;
 }
 
 .PlayerWrap {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    color: $grey;
-    border: solid 3px $orange;
-    padding: 1vw 0;
-    flex: 1;
-    font-size: 1.5vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: $grey;
+  border: solid 3px $orange;
+  padding: 1vw 0;
+  flex: 1;
+  font-size: 1.5vw;
 }
 
 .PlayerActive {
-    color: $white;
-    background-color: $orange;
-    border: solid 3px $orange;
-    font-size: 2vw;
+  color: $white;
+  background-color: $orange;
+  border: solid 3px $orange;
+  font-size: 2vw;
 }
 
 .PlayersWrap {
-    background-color: $white;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    min-height: 10vh;
-    width: 100%;
-    margin: 0 auto;
+  background-color: $white;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  min-height: 10vh;
+  width: 100%;
+  margin: 0 auto;
 }
 
 .playerCard {
-    background-color: $white;
-    color: $grey;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-    margin: 2% 0;
-    height: 30vh;
-    border-radius: 10px;
+  background-color: $white;
+  color: $grey;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  margin: 2% 0;
+  height: 30vh;
+  border-radius: 10px;
 }
 
 .playerScore {
-    font-size: 5vw;
+  font-size: 5vw;
 }
 
 .playerInfo {
-    margin: 2%;
-    font-size: 3vw;
+  margin: 2%;
+  font-size: 3vw;
 }
 
 .Button {
-    width: 25%;
-    padding: 2%;
-    font-size: 1vw;
-    margin: 2%
+  width: 25%;
+  padding: 2%;
+  font-size: 1vw;
+  margin: 2%;
 }
 
-
-
 .NextBtn {
-
 }
 
 .whiteBtn {
-    background-color: $white;
-    color: $orange;
-    transition: all 0.5s;
-    &:active {
-        background-color: $orange;
-        color: $white;
-    }
+  background-color: $white;
+  color: $orange;
+  transition: all 0.5s;
+  &:active {
+    background-color: $orange;
+    color: $white;
+  }
 }
