--- a/src/screen/Welcome/Welcome.module.scss
+++ b/src/screen/Welcome/Welcome.module.scss
@@ -1,15 +1,15 @@
-@import '../../styles//variables.module.scss';
+@import "../../styles//variables.module.scss";
 
 .TitleWrap {
-    background-color: $orange;
-    margin: 10% 0;
-    padding: 3%;
-    transform: skewY(-5deg);
-    box-shadow: 0px 10px 10px 5px black;
+  background-color: $orange;
+  margin: 10% 0;
+  padding: 3%;
+  transform: skewY(-5deg);
+  box-shadow: 0px 10px 10px 5px black;
 }
 
 .Title {
-    color: $white;
-    font-size: 8vw;
-    transform: skewX(5deg);
+  color: $white;
+  font-size: 8vw;
+  transform: skewX(5deg);
 }
